--- a/src/components/AddItems.css
+++ b/src/components/AddItems.css
@@ -3,7 +3,7 @@
 }
 .list {
   align-items: center;
-  margin-top: 10px;
+  margin-top: 30px;
   position: absolute;
   top: 35%;
   left: 36%;
@@ -16,7 +16,6 @@
   width: 50%;
   height: 50px;
   padding: 10px;
-
   display: flex;
   justify-content: space-evenly;
   position: absolute;
@@ -25,6 +24,13 @@
   font-family: "Segoe UI", Tahoma;
 }
 #it {
+  cursor: pointer;
+  position: relative;
+  padding: 12px 8px 12px 40px;
+  background: #eee;
+  font-size: 18px;
+  border-radius: 0.3cm;
+  transition: 0.2s;
   list-style: square;
   font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
   margin-top: 10px;
@@ -71,13 +77,13 @@ input {
   justify-content: space-evenly;
 }
 
-#btdel {
+.btdel {
   font-family: monospace;
   font-size: 20px;
   border-width: 1px;
-  background-color: rgba(206, 108, 108, 0.514);
+  background-color: rgb(255, 255, 255);
   border-radius: 0.3cm;
-  border: solid rgb(204, 27, 27);
+  border: solid rgb(153, 149, 149);
   width: 100px;
   margin-left: 10px;
 }
